<resources>
    <string name="app_name">UManitoba Campus Map</string>

    <string name="distance_remaining">Distance Remaining: </string>
    <string name="est_time">Estimated Time: </string>

    <string name="action_settings">Settings</string>

    <string name="arrived_msg">You have arrived.</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="campus_map">Campus Map</string>
    <string name="navigate">Navigate</string>

    <string name="curr_location">Current Location</string>

    <string name="building_layouts">Building Layouts</string>
    <string name="tunnel_layouts">Tunnel Layouts</string>

    <string name="active_living_centre">Active Living Centre</string>
    <string name="agriculture">Agriculture</string>
    <string name="agr_engineer">Agricultural Engineering</string>
    <string name="allen">Allen</string>
    <string name="animal_sci">Animal Science / Entomology</string>
    <string name="archi_2">Architecture 2</string>
    <string name="armes">Armes</string>
    <string name="artlab">Artlab</string>
    <string name="bio_sci">Biological Science</string>
    <string name="buller">Buller</string>
    <string name="dairy_science">Dairy Science</string>
    <string name="drake_centre">Drake Centre</string>
    <string name="duff_roblin">Duff Roblin</string>
    <string name="education">Education</string>
    <string name="eitc_e1">EITC E1</string>
    <string name="eitc_e2">EITC E2</string>
    <string name="eitc_e3">EITC E3</string>
    <string name="elizabeth_dafoe">Elizabeth Dafoe</string>
    <string name="ext_education">Extended Education</string>
    <string name="fletcher">Fletcher</string>
    <string name="frank_kennedy">Frank Kenny Centre</string>
    <string name="helen_glass">Helen Glass</string>
    <string name="human_ecology">Human Ecology</string>
    <string name="isbister">Isbister</string>
    <string name="machray">Machray</string>
    <string name="parker">Parker</string>
    <string name="plant_sci">Plant Science</string>
    <string name="robert_schultz">Robert Schultz Theatre</string>
    <string name="robson">Robson</string>
    <string name="russel">Russel</string>
    <string name="st_johns">St.Johns College</string>
    <string name="st_pauls">St.Pauls College</string>
    <string name="tache_arts">Tache Arts Complex</string>
    <string name="tier">Tier</string>
    <string name="uni_centre">University Centre</string>
    <string name="uni_college">University College</string>
    <string name="wallace">Wallace</string>
    <string name="welcome_centre">Welcome Centre</string>

    <string name="q_lot">Q Lot</string>
    <string name="k_lot">K Lot</string>
    <string name="i_lot">I Lot</string>
    <string name="student_lot">Student Parking (U Lot)</string>

    <string name="nb_uni_at_dysart">Northbound University at Dysart</string>
    <string name="sb_uni_at_dysart">Southbound University at Dysart</string>
    <string name="wb_dafoe_at_uni">Westbound Dafoe at U of M Station</string>
    <string name="eb_dafoe_at_uni">Eastbound Dafoe at University</string>
    <string name="eb_dafoe_at_agri">Eastbound Dafoe at Agriculture</string>
    <string name="wb_dafoe_at_agriculture">Westbound Dafoe at Agriculture</string>
    <string name="nb_uni_chancellor">Northbound University at Chancellor Matheson</string>

    <string name="agri_to_animal_sci">Agriculture / Animal Science</string>
    <string name="archi2_to_ext_educ">Archi2 / Ext Education</string>
    <string name="dafoe_duff_uni_college">Dafoe / Duff Roblin / Uni Colleg</string>
    <string name="uni_college_to_robson">Uni College / Robson</string>
    <string name="russel_to_archi2">Russel / Architecture 2</string>
    <string name="tier_to_artlab">Tier / Artlab</string>
    <string name="wallace_to_parker">Wallace / Parker</string>

    <string-array name="lots_bus_stops">
        <item>@string/q_lot</item>
        <item>@string/k_lot</item>
        <item>@string/i_lot</item>
        <item>@string/student_lot</item>
        <item>@string/nb_uni_at_dysart</item>
        <item>@string/nb_uni_chancellor</item>
        <item>@string/sb_uni_at_dysart</item>
        <item>@string/wb_dafoe_at_uni</item>
        <item>@string/eb_dafoe_at_uni</item>
        <item>@string/eb_dafoe_at_agri</item>
        <item>@string/wb_dafoe_at_agriculture</item>
    </string-array>

    <string-array name="building_options" >
        <item>@string/active_living_centre</item>
        <item>@string/agriculture</item>
        <item>@string/agr_engineer</item>
        <item>@string/allen</item>
        <item>@string/animal_sci</item>
        <item>@string/archi_2</item>
        <item>@string/armes</item>
        <item>@string/artlab</item>
        <item>@string/bio_sci</item>
        <item>@string/buller</item>
        <item>@string/dairy_science</item>
        <item>@string/drake_centre</item>
        <item>@string/duff_roblin</item>
        <item>@string/education</item>
        <item>@string/eitc_e1</item>
        <item>@string/eitc_e2</item>
        <item>@string/eitc_e3</item>
        <item>@string/elizabeth_dafoe</item>
        <item>@string/ext_education</item>
        <item>@string/fletcher</item>
        <item>@string/helen_glass</item>
        <item>@string/human_ecology</item>
        <item>@string/isbister</item>
        <item>@string/machray</item>
        <item>@string/parker</item>
        <item>@string/robert_schultz</item>
        <item>@string/robson</item>
        <item>@string/russel</item>
        <item>@string/st_johns</item>
        <item>@string/st_pauls</item>
        <item>@string/tache_arts</item>
        <item>@string/tier</item>
        <item>@string/uni_centre</item>
        <item>@string/uni_college</item>
        <item>@string/wallace</item>
        <item>@string/welcome_centre</item>
    </string-array>

    <string-array name="tunnel_connected_buildings">
        <item>@string/allen</item>
        <item>@string/armes</item>
        <item>@string/machray</item>
    </string-array>

    <string-array name="building_rooms">
        <!-- Allen -->
        <item>114 Allen</item>
        <item>201 Allen</item>
        <item>316 Allen</item>
        <item>319 Allen</item>
        <item>403 Allen</item>
        <item>405 Allen</item>
        <item>522 Allen</item>

        <!-- Armes -->
        <item>111 Armes</item>
        <item>115 Armes</item>
        <item>200 Armes</item>
        <item>201 Armes</item>
        <item>204 Armes</item>
        <item>205 Armes</item>
        <item>208 Armes</item>

        <!-- Machray -->
        <item>106 Machray</item>
        <item>107 Machray</item>
        <item>108 Machray</item>
        <item>111 Machray</item>
        <item>112 Machray</item>
        <item>113 Machray</item>
        <item>115 Machray</item>
        <item>211 Machray</item>
        <item>239 Machray</item>
    </string-array>

    <string-array name="drawer_group_options">
        <item>@string/navigate</item>
        <item>@string/campus_map</item>
        <item>@string/building_layouts</item>
        <item>@string/tunnel_layouts</item>
    </string-array>

    <string-array name="drawer_building_options">
        <item>@string/agriculture</item>
        <item>@string/agr_engineer</item>
        <item>@string/allen</item>
        <item>@string/animal_sci</item>
        <item>@string/archi_2</item>
        <item>@string/armes</item>
        <item>@string/artlab</item>
        <item>@string/bio_sci</item>
        <item>@string/buller</item>
        <item>@string/dairy_science</item>
        <item>@string/drake_centre</item>
        <item>@string/duff_roblin</item>
        <item>@string/education</item>
        <item>@string/eitc_e1</item>
        <item>@string/eitc_e2</item>
        <item>@string/eitc_e3</item>
        <item>@string/elizabeth_dafoe</item>
        <item>@string/ext_education</item>
        <item>@string/fletcher</item>
        <item>@string/helen_glass</item>
        <item>@string/human_ecology</item>
        <item>@string/isbister</item>
        <item>@string/machray</item>
        <item>@string/parker</item>
        <item>@string/plant_sci</item>
        <item>@string/robert_schultz</item>
        <item>@string/robson</item>
        <item>@string/russel</item>
        <item>@string/st_johns</item>
        <item>@string/st_pauls</item>
        <item>@string/tache_arts</item>
        <item>@string/tier</item>
        <item>@string/uni_centre</item>
        <item>@string/uni_college</item>
        <item>@string/wallace</item>
    </string-array>

    <string-array name="drawer_tunnel_options">
        <item>@string/agri_to_animal_sci</item>
        <item>@string/archi2_to_ext_educ</item>
        <item>@string/dafoe_duff_uni_college</item>
        <item>@string/uni_college_to_robson</item>
        <item>@string/russel_to_archi2</item>
        <item>@string/tier_to_artlab</item>
        <item>@string/wallace_to_parker</item>
    </string-array>
</resources>
